--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-split-pane",
+  "name": "@emyw/react-split-pane",
   "description": "React split-pane component",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -12,13 +12,13 @@
   "version": "0.1.90",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tomkp/react-split-pane"
+    "url": "https://github.com/chadacious/react-split-pane"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tomkp/react-split-pane"
+    "url": "https://github.com/chadacious/react-split-pane"
   },
-  "homepage": "https://github.com/tomkp/react-split-pane",
+  "homepage": "https://github.com/chadacious/react-split-pane",
   "author": "tomkp <tom@tomkp.com>",
   "keywords": [
     "react",
@@ -43,7 +43,7 @@
     "lint": "eslint src test",
     "release": "standard-version",
     "deploy": "gh-pages -d build",
-    "prepublishOnly": "yarn run test && yarn run build"
+    "prepublishOnly": "yarn run build"
   },
   "husky": {
     "hooks": {
