--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@emyw/react-split-pane",
+  "name": "react-split-pane",
   "description": "React split-pane component",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
